# blurNormalShrinkWrap

./: .gitignore  CMakeLists.txt  blurNormalShrinkWrap.cpp  blurNormalShrinkWrap.h  blurShrinkWrap.cpp  blurShrinkWrap.h  cpom_normal.cpp  cpom_normal.h  mayaConfigure.bat  mayacmd.py  meson.build  pluginRegister.cpp
.github/workflows/: main.yml
bvh/v2/: bbox.h  bvh.h  tri.h  utils.h  vec.h
scripts/: blurNormalShrinkWrap.py
src/: blurNormalShrinkWrap.cpp  blurNormalShrinkWrap.h  cpom_normal.cpp  cpom_normal.h  cpom_types.h  dist_point_triangle.h  pluginRegister.cpp
subprojects/: bvh.wrap
subprojects/maya/: meson.build
